# prak_7_sem

./: .gitmodules  Makefile  README.md  TableTransporator.cxx
FM_task/: CMakeLists.txt
FM_task/include/: ObjectFactory.h  factory.hpp  gradient_descent.hpp  math_lib.hpp  mathlibrary.hpp  operators.hpp
FM_task/src/: factory.cpp  gradient_descent.cpp  main.cpp  math_lib.cpp  operators.cpp  test.cpp
IO_task/: CMakeLists.txt  README.md  main.cpp  temperature.cpp  temperature.hpp
IO_task/automatic_test_system/: find_best_proc.py  find_root_point.py
IO_task/include/: io.hpp  mutable.hpp  parallel_io.hpp  problem.hpp  solution.hpp  temperature.hpp  xml_parser.hpp
IO_task/report/: make_report.sh  report.tex
IO_task/src/: io.cpp  main.cpp  mutable.cpp  parallel_io.cpp  problem.cpp  solution.cpp  temperature.cpp  xml_parser.cpp
IO_task/tests/additional/: 50000_100.xml
IO_task/tests/root_point/: 10000_10.xml  1000_10.xml  100_10.xml  15000_10.xml  20000_10.xml  25000_10.xml  30000_10.xml  35000_10.xml  40000_10.xml  50000_10.xml  5000_10.xml
LG_task/: CMakeLists.txt  auto_test.py
LG_task/include/: configuration.hpp  crossbreeding.hpp  genetic_algorithm.hpp  mutate.hpp  selection.hpp
LG_task/src/: configuration.cpp  crossbreeding.cpp  genetic_algorithm.cpp  main.cpp  mutate.cpp  selection.cpp
LO_task/: Addons.xcu  Makefile  README.md  TableTransporator.cxx  TableTranspositor.cxx  TableTranspositor.oxt  addon.cxx  component.cxx  main_functional.cxx  main_functional.h  transpositor.cxx  transpositor.hxx
